# salmon-pms

./: .gitignore  AUDIT_REPORT.md  FINANCIAL_STATEMENTS_REVIEW.md  PROFIT_STATEMENT_REVIEW.md  README.md
backend/: .env  .env.example  Dockerfile  alembic.ini  backup_db.py  check_db.py  check_delete.py  cleanup_duplicate_weilan.py  fix_dates.py  migrate_8468.py  migrate_finance_v4.py  pyproject.toml  revert_enums.py  salmon_pms_dev.db  salmon_pms_dev.db-journal  salmon_pms_dev.db.backup  salmon_pms_dev.db.pre-migration-20260503_1552.backup  setup_v3_tables.py  update_enums.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  base.py  finished_product_v2.py  finished_product_v2_import.py  finished_products.py  material_supplier.py  returns.py
backend/app/schemas/: __init__.py  auth.py  batch.py  company.py  daily_slaughter.py  finance.py  finance_v4_migration.py  finished_product_sales.py  finished_product_v2.py  invoice.py  notification.py  product.py  report.py  returns.py  sales.py  settings.py  warehouse_v2.py
backend/app/services/: batch_service.py  company_service.py  daily_slaughter_service.py  finance_service.py  (+13 more)
backend/backups/: salmon_pms_dev_20260501_182238.db  salmon_pms_dev_20260502_055833.db
backend/migrations/: env.py
backend/salmon_pms_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: batch_insert_returns.sql  diagnose_aftersales.py  fix_exchange_no.sql  fix_orphaned_aftersales.py  fix_sales_status.py  fix_single_sale.py  init_data.py
(+139 files in other folders)
