[project]
name = "salmon-pms-backend"
version = "0.1.0"
description = "三文鱼项目管理系统 - FastAPI后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
